{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 145,
  "lineage": "3450b49b-22bc-0de8-f05c-a2531d5a0767",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arima_eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5d9e78ecf9213bb",
            "arn": "arn:aws:ec2:us-east-1:039612869286:elastic-ip/eipalloc-0f5d9e78ecf9213bb",
            "association_id": "eipassoc-0f3aa450de131dead",
            "domain": "vpc",
            "id": "eipalloc-0f5d9e78ecf9213bb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cbe9834077123aaf",
            "private_dns": "ip-10-0-1-215.ec2.internal",
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-44-210-218-5.compute-1.amazonaws.com",
            "public_ip": "44.210.218.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tera_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01816d07b1128cd2d",
            "arn": "arn:aws:ec2:us-east-1:039612869286:instance/i-019f9a2fb7d017767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019f9a2fb7d017767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8ac7aa5638d3e1c",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.45",
            "public_ip": "54.159.138.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca9ab3bce6b98dfd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-096e61fe419bf1d52"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4bd195c63337b35",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096e61fe419bf1d52"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra",
            "aws_security_group.terra_inst_SG",
            "aws_subnet.arima_public_subnet_1",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arima_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:internet-gateway/igw-05b63389f9b29444f",
            "id": "igw-05b63389f9b29444f",
            "owner_id": "039612869286",
            "tags": {
              "Name": "Arima IGW"
            },
            "tags_all": {
              "Name": "Arima IGW"
            },
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arima_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5d9e78ecf9213bb",
            "association_id": "eipassoc-0f3aa450de131dead",
            "connectivity_type": "public",
            "id": "nat-0d62d1b31d890b971",
            "network_interface_id": "eni-0cbe9834077123aaf",
            "private_ip": "10.0.1.215",
            "public_ip": "44.210.218.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f4bd195c63337b35",
            "tags": {
              "Name": "Arima NAT GW"
            },
            "tags_all": {
              "Name": "Arima NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.arima_eip_nat",
            "aws_subnet.arima_public_subnet_1",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arima_private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:route-table/rtb-0bd64816245581488",
            "id": "rtb-0bd64816245581488",
            "owner_id": "039612869286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d62d1b31d890b971",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arima_eip_nat",
            "aws_nat_gateway.arima_nat_gw",
            "aws_subnet.arima_public_subnet_1",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arima_public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:route-table/rtb-0d44440f843fdd3db",
            "id": "rtb-0d44440f843fdd3db",
            "owner_id": "039612869286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b63389f9b29444f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arima_IGW",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd14b1042845295",
            "route_table_id": "rtb-0bd64816245581488",
            "subnet_id": "subnet-0c39374b0d6be3e17"
          },
          "dependencies": [
            "aws_eip.arima_eip_nat",
            "aws_nat_gateway.arima_nat_gw",
            "aws_route_table.arima_private_rt_1",
            "aws_subnet.arima_private_subnet_1",
            "aws_subnet.arima_public_subnet_1",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbf783a99fc213d1",
            "route_table_id": "rtb-0d44440f843fdd3db",
            "subnet_id": "subnet-0f4bd195c63337b35"
          },
          "dependencies": [
            "aws_internet_gateway.arima_IGW",
            "aws_route_table.arima_public_rt_1",
            "aws_subnet.arima_public_subnet_1",
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_inst_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:security-group/sg-096e61fe419bf1d52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbond traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096e61fe419bf1d52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Incoming",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250129055144258500000001",
            "name_prefix": "terraform-",
            "owner_id": "039612869286",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arima_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:subnet/subnet-0c39374b0d6be3e17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39374b0d6be3e17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612869286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arima_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:subnet/subnet-012100227cf92b7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012100227cf92b7f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612869286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arima_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:subnet/subnet-0f4bd195c63337b35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4bd195c63337b35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039612869286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arima_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:subnet/subnet-0d53fb8e4bcee6af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d53fb8e4bcee6af9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039612869286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0781f701ab8d24194"
          },
          "dependencies": [
            "aws_vpc.arima_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arima_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:039612869286:vpc/vpc-0781f701ab8d24194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c17ffedd27f6ded",
            "default_route_table_id": "rtb-00e82182d87e42c6a",
            "default_security_group_id": "sg-0917e696db4f0c88f",
            "dhcp_options_id": "dopt-0daa42255f06b3b16",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0781f701ab8d24194",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00e82182d87e42c6a",
            "owner_id": "039612869286",
            "tags": {
              "Name": "Arima VPC DEV"
            },
            "tags_all": {
              "Name": "Arima VPC DEV"
            }
          }
        }
      ]
    }
  ]
}